--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "apollo-link-ws": "^1.0.19",
     "date-fns": "^2.10.0",
     "firebase": "^9.17.1",
-    "graphql": "^14.6.0",
+    "graphql": "^15.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-hook-form": "^7.43.5",
     "react-lines-ellipsis": "^0.14.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
@@ -25,7 +26,8 @@
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
     "subscriptions-transport-ws": "^0.9.16",
-    "uuid": "^7.0.1"
+    "uuid": "^7.0.1",
+    "validator": "^13.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,7 +35,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "now-build": "react-scripts build",
-    "deploy": "npx now --target production"
+    "deploy": "npx now --prod"
   },
   "eslintConfig": {
     "extends": "react-app"
