--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "apollo-client": "^2.6.8",
     "apollo-link-ws": "^1.0.19",
     "date-fns": "^2.10.0",
+    "escape-html": "^1.0.3",
     "firebase": "^9.17.1",
     "graphql": "^15.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-graceful-image": "^1.5.0",
     "react-helmet": "^5.2.1",
     "react-hook-form": "^7.43.5",
     "react-lines-ellipsis": "^0.14.1",
@@ -24,6 +26,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.25.2",
+    "slate": "^0.93.0",
+    "slate-history": "^0.93.0",
+    "slate-react": "^0.93.0",
     "slick-carousel": "^1.8.1",
     "subscriptions-transport-ws": "^0.9.16",
     "uuid": "^7.0.1",
